Adjusted params in Swagger to be consistent
